--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,3 +80,8 @@ flutter:
         - asset: assets/fonts/Metropolis-Regular.otf
         - asset: assets/fonts/Metropolis-Bold.otf
           weight: 700
+    - family: OpenSans
+      fonts:
+        - asset: assets/fonts/OpenSans-Regular.ttf
+        - asset: assets/fonts/OpenSans-Bold.ttf
+          weight: 700
